<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_shopping"
            android:title="@string/menu_gallery" />
        <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_ventas"
        android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_productos"
            android:icon="@drawable/ic_productos"
            android:title="@string/menu_producto" />
        <item
            android:id="@+id/nav_mensajes"
            android:icon="@drawable/ic_msj"
            android:title="@string/menu_msj" />
        <item
            android:id="@+id/nav_repartidor"
            android:icon="@drawable/ic_group"
            android:title="@string/menu_repartidor" />
        <item
            android:id="@+id/nav_proveedor"
            android:icon="@drawable/ic_proveedor"
            android:title="@string/menu_proveedor" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_cliente"
            android:title="@string/menu_cliente" />

    </group>
</menu>
